// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mermaid-preview Renders \`mermaid-preview\` with custom props 1`] = `
<panzoom-stub
  class="mermaid-preview"
  helptext="Useful shortcuts:
Ctrl + mouse wheel - zoom in/out
Shift + mouse wheel - horizontal scroll
Alt + mouse wheel - vertical scroll
Ctrl + Left mouse click + drag - pan the area"
  maxzoom="4"
  minzoom="0.1"
  movestep="20"
  style="min-height: 20px;"
  zoomstep="0.1"
>
  <mermaid-code-preview-stub
    class="mermaid-preview__preview"
    value="code"
  />
  <mermaid-points-preview-stub
    class="mermaid-preview__points"
    color-indicator="state"
    pbehavior-enabled="true"
    points="[object Object],[object Object]"
    popup-actions="true"
    popup-template="template"
  />
</panzoom-stub>
`;

exports[`mermaid-preview Renders \`mermaid-preview\` with required props 1`] = `
<panzoom-stub
  class="mermaid-preview"
  helptext="Useful shortcuts:
Ctrl + mouse wheel - zoom in/out
Shift + mouse wheel - horizontal scroll
Alt + mouse wheel - vertical scroll
Ctrl + Left mouse click + drag - pan the area"
  maxzoom="4"
  minzoom="0.1"
  movestep="20"
  style="min-height: 20px;"
  zoomstep="0.1"
>
  <mermaid-code-preview-stub
    class="mermaid-preview__preview"
    value="code"
  />
  <mermaid-points-preview-stub
    class="mermaid-preview__points"
    points="[object Object],[object Object]"
  />
</panzoom-stub>
`;
